# birl_kitting_experiment_simulation

./: CMakeLists.txt  package.xml  setup.py
launch/: baxter_ft_gazebo.launch  gazebo_env_rviz.launch  load_gazebo_env.launch
model/: container.xacro  gazebo_env_setup.xacro  table_front.xacro  table_right_side.xacro
scripts/: load_pickig_objects_gazebo.py  run.sh
src/birl_kitting_experiment_simulation/: gazebo_model_util.py  get_model_pose_client.py
