<?xml version="1.0"?>
<package format="2">
  <name>birl_kitting_experiment_simulation</name>
  <version>0.0.0</version>
  <description>The birl_kitting_experiment_simulation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="birl-spai-ubuntu14@todo.todo">birl-spai-ubuntu14</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>birl_baxter_description</build_depend>
  <build_export_depend>birl_baxter_description</build_export_depend>
  <exec_depend>birl_baxter_description</exec_depend>

  <build_depend>baxter_gazebo</build_depend>
  <build_export_depend>baxter_gazebo</build_export_depend>
  <exec_depend>baxter_gazebo</exec_depend>

  <build_depend>birl_gripper_description</build_depend>
  <build_export_depend>birl_gripper_description</build_export_depend>
  <exec_depend>birl_gripper_description</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
